<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bckgrnd1">

	<TextView 
	    android:id="@+id/aboutus"
	    android:text="@string/about1"
	    android:textSize="15dp"
	    android:typeface="sans"
	    android:textStyle="bold"
	    android:textColor="#39094B"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="20dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"/>
	<TextView
	    android:id="@+id/contactus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#39094B"
	    android:text="Contact Us"
	    android:textSize="15dp"
	    android:typeface="sans"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="5dp"
	    android:textStyle="bold"/>
	
	<!-- name -->
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:orientation="horizontal">
	    
	   <LinearLayout 
	     android:orientation="vertical"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content">
	     
	    <TextView 
	    android:layout_width="wrap_content"
	    android:textSize="15dp"
	    android:typeface="sans"
	    android:textColor="#39094B"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="2dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/name"
	    android:text="@string/name"/>
	<!-- address -->
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:textColor="#39094B"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/addline1"
	    android:text="@string/addline1"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:textColor="#39094B"
	    android:typeface="sans"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/addline2"
	    android:text="@string/addline2"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:textColor="#39094B"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/addline3"
	    android:text="@string/addline3"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:textColor="#39094B"
	    android:typeface="sans"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/addline4"
	    android:text="@string/addline4"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:layout_marginLeft="10dp"
	    android:textColor="#39094B"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/phone1"
	    android:clickable="true"
	   	android:selectAllOnFocus="true"
	    android:text="@string/phone1"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:textColor="#39094B"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/phone2"
	    android:clickable="true"
	    android:text="@string/phone2"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:textColor="#39094B"
	    android:layout_marginLeft="10dp"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/email"
	    android:text="@string/email"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:textSize="12dp"
	    android:typeface="sans"
	    android:layout_marginLeft="10dp"
	    android:textColor="#39094B"
	    android:textStyle="bold"
	    android:layout_height="wrap_content"
	    android:id="@+id/site"
	    android:text="@string/site"/>
	</LinearLayout>
	    
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="20dp">
	    
		<ImageView 
		    android:src="@drawable/nettechlocation"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:clickable="true"
		    android:fadingEdge="vertical"
		    android:id="@+id/nettechlocationlauncher"/>	    
	</LinearLayout>
</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal">
	    
	    <ImageView 
	   		android:id="@+id/facebook"
	    	android:src="@drawable/fbsmall"
	    	android:clickable="true"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:scaleType="fitXY"
	    	android:layout_gravity="left"/>						
	    
	    <ImageView 
	   		android:id="@+id/twitter"
	    	android:src="@drawable/twittersmall"
	    	android:layout_marginLeft="5dp"
	    	android:clickable="true"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:scaleType="fitXY"
	    	android:layout_gravity="center"/>						
	    	    
	    <ImageView 
	   		android:id="@+id/blogger"
	    	android:src="@drawable/bloggersmall"
	    	android:layout_marginLeft="5dp"
	    	android:clickable="true"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:scaleType="fitXY"
	    	android:layout_gravity="right"/>						
	    
	    	</LinearLayout>
</LinearLayout>